<resources>
    <string name="app_name">Download File</string>

    <string name="status_download">Dowloading...</string>
    <string name="action_settings">Settings</string>
    <string name="action_download">Download File</string>
    <string name="action_multichoice">Multi Choice</string>

    <string name="menu_pause">Pause</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_redownload">Redownload</string>
    <string name="menu_delete">Delete</string>

    <string name="close">Close</string>
    <string name="start_download">Start Download</string>
    <string name="apply">Apply</string>
    <string name="link_download">Link Download</string>
    <string name="setting_download">Setting Download</string>

    <string name="network_options">Network Options</string>
    <string name="save_to">Save Download to</string>
    <string name="max_active">Max Active</string>
    <string name="network_access">Download only when on Wi-Fi or 3G</string>
    <string name="network_connect">Auto-resume when reconnected</string>
</resources>
