<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setting_download"
        android:textColor="@color/blueDialog"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/blueDialog" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_options" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_access"
        android:id="@+id/chkNetAccess" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_connect"
        android:id="@+id/chkNetConnect" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_to" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="text"
        android:id="@+id/editSaveTo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_active" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekMaxActive" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvBtnApply"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_lnlayout"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="@color/grayDark"
            android:textSize="17sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grayLight"/>

        <TextView
            android:id="@+id/tvBtnClose"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_lnlayout"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/grayDark"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>