<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/actDownload"
        android:title="@string/action_download"
        android:icon="@android:drawable/stat_sys_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actMultiChoice"
        android:title="@string/action_multichoice"
        android:icon="@android:drawable/checkbox_on_background"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actSettings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom" />

</menu>
