<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_conner_bottom"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/link_download"
        android:textColor="@color/blueDialog"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/blueDialog" />

    <EditText
        android:id="@+id/editLinkDownload"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvBtnStart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_lnlayout"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/start_download"
            android:textColor="@color/grayDark"
            android:textSize="17sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grayLight"/>

        <TextView
            android:id="@+id/tvBtnClose"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_lnlayout"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/grayDark"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>